--- a/public/css/app.css
+++ b/public/css/app.css
@@ -97,11 +97,17 @@ nav .nav-link,
     font-size: 14px;
     transition: all .35 ease-in-out;
     margin:10px 0;
+    transition: all .3 ease-in-out;
 }
 
 nav .nav-link:hover{
     color: var(--bs-primary);
     background-color:var(--bs-light);
+}
+
+nav .nav-link.active{
+    background-color: var(--bs-primary);
+    color: var(--bs-white);
 }
 
 nav .nav-link i{
